<resources>
    <string name="app_name">MyDigitalent</string>
    <string name="upgrade_your_skill_in_digital_era">Upgrade your skill in Digital Era</string>
    <string name="by_participating_in_the_trainings_with_digitalent">by participating in the trainings with <b>Digitalent</b></string>
    <string name="choose_photo">Choose Photo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="form_input_empty">%s cannot be empty</string>
    <string name="enter_your_username_in_here">Enter your username in here</string>
    <string name="enter_your_address_in_here">Enter your address in here</string>
    <string name="enter_your_phone_number_in_here">Enter your phone number in here</string>
    <string name="enter_your_password_in_here">Enter your password in here</string>
    <string name="user_has_already_register">User has already register</string>
    <string name="input_process_error">Input process error, please check the code</string>
    <string name="user_successfully_register">User has successfully register</string>
    <string name="welcome_back_to_digitalent">Welcome Back to <b>Digitalent</b></string>
    <string name="dont_have_an_account_register">Don\'t have an account? <b>Register</b></string>
    <string name="login">Login</string>
    <string name="password_does_not_match">Password does not match, please try again</string>
    <string name="user_dont_have_an_account">You don\'t have an account, please register first</string>
    <string name="info_address"><b>Address</b>: %s</string>
    <string name="info_phone"><b>Phone</b>: %s</string>
    <string name="info_latitude"><b>Latitude</b>: %s</string>
    <string name="info_longitude"><b>Longitude</b>: %s</string>
    <string name="logout">logout</string>
</resources>